--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">RtspCamera</string>
     <string name="start_stream">Start stream</string>
     <string name="stream_link">Stream link</string>
+    <string name="no_link">No link</string>
 </resources>
