--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">RtspCamera</string>
+    <string name="app_name">RTSP Camera</string>
     <string name="start_stream">Start stream</string>
     <string name="stream_link">Stream link</string>
     <string name="no_link">No link</string>
