--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="start_stream">Start stream</string>
     <string name="stream_link">Stream link</string>
     <string name="no_link">No link</string>
+    <string name="connecting">Connecting</string>
+    <string name="connected">Connected</string>
+    <string name="error">Error</string>
+    <string name="disconnected">Disconnected</string>
+    <string name="unauthorized">Unauthorized</string>
+    <string name="loading">Loading</string>
 </resources>
