--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -15,4 +15,18 @@
     <string name="log">Log</string>
     <string name="connection_log">Connection log</string>
     <string name="settings">Settings</string>
+    <string name="close">Close</string>
+    <string name="save">Save</string>
+    <string name="change_stream_link">Change stream link</string>
+    <string name="change_username_and_password">Change username and password</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="current_link">Current link</string>
+    <string name="no_username">No username</string>
+    <string name="no_password">No password</string>
+    <string name="set_default_launcher">Set default launcher</string>
+    <string name="enable_video">Enable video</string>
+    <string name="enable_audio">Enable audio</string>
+    <string name="aspect_ratio">Aspect ratio</string>
+    <string name="enable_reconnect_timeout">Enable reconnect timeout</string>
 </resources>
